fix(gux-form-field-error): use spacing variables, stop icon shrinking, update font size to 12px

--- a/src/components/stable/gux-form-field/functional-components/gux-form-field-error/gux-form-field-error.less
+++ b/src/components/stable/gux-form-field/functional-components/gux-form-field-error/gux-form-field-error.less
@@ -1,4 +1,5 @@
 @import (reference) '../../../../../style/color-palette.less';
+@import (reference) '../../../../../style/spacing.less';
 
 /* stylelint-disable-next-line selector-class-pattern */
 .GuxFormFieldErrorStyle {
@@ -9,8 +10,8 @@
     align-content: stretch;
     align-items: flex-start;
     justify-content: flex-start;
-    margin: 4px 0;
-    font-size: 11px;
+    margin: @gux-spacing-2xs 0;
+    font-size: 12px;
     line-height: 20px;
     color: @gux-black-50;
 
@@ -22,9 +23,9 @@
       flex: 0 1 auto;
       align-self: auto;
       order: 0;
-      width: 16px;
-      height: 16px;
-      margin: 2px 4px 0 0;
+      min-width: 16px;
+      min-height: 16px;
+      margin: @gux-spacing-3xs @gux-spacing-2xs 0 0;
       color: @gux-alert-red-60;
     }
 
